--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="back">
-        <h5>helo </h5>
+        <h5>hello </h5>
     </div>
     <h5>Hey</h5>
     <p>I want these changes in other bracnch</p>
-    <h5>hey bussy </h5>
+    <h5>hey BOSS </h5>
 </body>
 </html>
