--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <p>I want these changes in other bracnch</p>
     <h5>hey BOSS </h5>
     <h6>on the way</h6>
+    <p> I m chnging this to pull these </p>
 </body>
 </html>
